The order of CSS properties is wrong in background shorthand https://bugs.webkit.org/show_bug.cgi?id=86152

Patch by Joe Thomas <joethomas@motorola.com> on 2012-05-19
Reviewed by Ryosuke Niwa.

Corrected the order of properties returned in StylePropertySet::getPropertyValue for background shorthand property to match the specification
http://www.w3.org/TR/css3-background/#background.

Source/WebCore:

* css/StylePropertyShorthand.cpp:
(WebCore::backgroundShorthand):

LayoutTests:

* fast/backgrounds/background-shorthand-with-backgroundSize-style-expected.txt:
* fast/backgrounds/background-shorthand-with-backgroundSize-style.html:
* fast/dom/background-shorthand-csstext-expected.txt:
* fast/dom/background-shorthand-csstext.html:

Canonical link: https://commits.webkit.org/104593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117694 268f45cc-cd09-0410-ab3c-d52691b4dbfc